--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat Room</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <h1 class="logo">Chat Room</h1>
+    <form class="form" id="form">
+      <input class="input" type="text" placeholder="Name" id="myname" required />
+      <input class="input" type="text" placeholder="Room Code" id="room" required />
+      <input class="input" type="text" placeholder="Message" id="message" required />
+      <button class="button" type="submit">Send Message</button>
+    </form>
+    <div class="messageArea" id="messageArea"></div>
+  </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
     let socket = io();
     let form = document.getElementById('form');
     let myname = document.getElementById('myname');
@@ -10,30 +33,33 @@
     let roomname = '';
 
     form.addEventListener('submit', (e) => {
-        e.preventDefault();
+      e.preventDefault();
 
-        if (!username || !roomname) {
-            username = myname.value;
-            roomname = room.value;
-            socket.emit('join-room', roomname);
-        }
+      if (!username || !roomname) {
+        username = myname.value;
+        roomname = room.value;
+        socket.emit('join-room', roomname);
+      }
 
-        if (message.value) {
-            socket.emit('chat-message', {
-                user: username,
-                text: message.value,
-                room: roomname
-            });
-            message.value = '';
-        }
+      if (message.value) {
+        socket.emit('chat-message', {
+          user: username,
+          text: message.value,
+          room: roomname,
+        });
+        message.value = '';
+      }
     });
 
     socket.on('chat-message', (data) => {
-        let chat = document.createElement('div');
-        chat.classList.add('message');
-        chat.classList.add(data.user === username ? 'sent' : 'received');
-        chat.innerHTML = `<span class="username">${data.user}:</span> ${data.text}`;
-        messageArea.appendChild(chat);
-        messageArea.scrollTop = messageArea.scrollHeight;
+      let chat = document.createElement('div');
+      chat.classList.add('message');
+      chat.classList.add(data.user === username ? 'sent' : 'received');
+      chat.innerHTML = `<span class="username">${data.user}:</span> ${data.text}`;
+      messageArea.appendChild(chat);
+      messageArea.scrollTop = messageArea.scrollHeight;
     });
-</script>
+  </script>
+</body>
+
+</html>
