--- a/index.html
+++ b/index.html
@@ -1,88 +1,37 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ChatRoom</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat Room with Call</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1 class="logo">ChatRoom</h1>
-    <form id="joinForm" class="form">
-      <input class="input" type="text" placeholder="Enter your name" id="username" required />
-      <input class="input" type="text" placeholder="Enter room code" id="room" required />
-      <button class="button" type="submit">Join Room</button>
+  <div id="joinScreen">
+    <h2>Join a Chat Room</h2>
+    <input type="text" id="username" placeholder="Enter your name" />
+    <input type="text" id="room" placeholder="Enter room code" />
+    <button onclick="joinRoom()">Join</button>
+  </div>
+
+  <div id="chatScreen" class="hidden">
+    <h2>Room: <span id="roomName"></span></h2>
+    <div id="chatBox"></div>
+    <form id="chatForm">
+      <input id="message" autocomplete="off" placeholder="Type a message" />
+      <button>Send</button>
     </form>
 
-    <div id="chatBox" class="hidden">
-      <div id="messageArea" class="messageArea"></div>
-      <form id="chatForm" class="form chat-form">
-        <input class="input" type="text" placeholder="Type your message" id="message" required />
-        <button class="button">Send</button>
-      </form>
+    <div class="video-controls">
+      <button id="callBtn" class="button">Start Call</button>
+      <button id="endCallBtn" class="button hidden">End Call</button>
     </div>
+    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="remoteVideo" autoplay playsinline></video>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-    const joinForm = document.getElementById('joinForm');
-    const chatForm = document.getElementById('chatForm');
-    const chatBox = document.getElementById('chatBox');
-    const messageArea = document.getElementById('messageArea');
-
-    let username = '';
-    let room = '';
-
-    joinForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      username = document.getElementById('username').value.trim();
-      room = document.getElementById('room').value.trim();
-
-      if (username && room) {
-        socket.emit('join room', { username, room });
-        joinForm.classList.add('hidden');
-        chatBox.classList.remove('hidden');
-      }
-    });
-
-    chatForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const msgInput = document.getElementById('message');
-      const message = msgInput.value.trim();
-      if (message) {
-        appendMessage({ username, message, isSender: true });
-        socket.emit('chat message', message);
-        msgInput.value = '';
-      }
-    });
-
-    socket.on('chat message', (data) => {
-      if (data.username !== username) {
-        appendMessage({ username: data.username, message: data.message, isSender: false });
-      }
-    });
-
-    socket.on('system message', (msg) => {
-      appendSystemMessage(msg);
-    });
-
-    function appendMessage({ username, message, isSender }) {
-      const msg = document.createElement('div');
-      msg.className = `message ${isSender ? 'sender' : 'receiver'}`;
-      msg.innerHTML = `<span class="username">${username}:</span> ${message}`;
-      messageArea.appendChild(msg);
-      messageArea.scrollTop = messageArea.scrollHeight;
-    }
-
-    function appendSystemMessage(msg) {
-      const msgEl = document.createElement('div');
-      msgEl.className = 'message system';
-      msgEl.textContent = msg;
-      messageArea.appendChild(msgEl);
-      messageArea.scrollTop = messageArea.scrollHeight;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
