--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat Room</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chat Room with WebRTC</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
