--- a/index.html
+++ b/index.html
@@ -2,136 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Audio & Video Chat Room with Drop Call</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #f9f9f9;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-    }
-
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 20px;
-      justify-content: center;
-    }
-
-    input, button {
-      padding: 8px 12px;
-      font-size: 16px;
-    }
-
-    #messageArea {
-      width: 100%;
-      max-width: 600px;
-      height: 200px;
-      overflow-y: auto;
-      background: #fff;
-      border: 1px solid #ccc;
-      padding: 10px;
-      box-sizing: border-box;
-      margin-bottom: 10px;
-    }
-
-    .message {
-      padding: 5px 10px;
-      margin: 5px 0;
-      border-radius: 5px;
-      max-width: 80%;
-      word-wrap: break-word;
-    }
-
-    .you {
-      background-color: #d1e7dd;
-      align-self: flex-end;
-      text-align: right;
-    }
-
-    .other {
-      background-color: #f8d7da;
-      align-self: flex-start;
-      text-align: left;
-    }
-
-    .info {
-      color: #666;
-      font-style: italic;
-      text-align: center;
-      margin: 5px 0;
-    }
-
-    .media-container {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
-      justify-content: center;
-      width: 100%;
-      max-width: 600px;
-      flex-wrap: wrap;
-    }
-
-    video, audio {
-      width: 45%;
-      max-width: 300px;
-      outline: none;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      background: #000;
-    }
-
-    audio {
-      width: 45%;
-      max-width: 300px;
-    }
-
-    /* Hide media elements initially */
-    #localVideo, #remoteVideo, #localAudio, #remoteAudio {
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      video, audio {
-        width: 100%;
-        max-width: none;
-      }
-    }
-  </style>
+  <title>WebRTC Audio/Video Chat</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <h2>Audio & Video Chat Room with Drop Call</h2>
+<h1>WebRTC Audio/Video Chat</h1>
 
-  <div class="controls">
-    <input id="username" placeholder="Your Name" />
-    <input id="room" placeholder="Room ID" />
-    <button id="joinBtn">Join Room</button>
-    <button id="startAudioCallBtn" disabled>Start Audio Call</button>
-    <button id="startVideoCallBtn" disabled>Start Video Call</button>
-    <button id="dropCallBtn" disabled>Drop Call</button>
-    <input id="messageInput" placeholder="Type a message" />
-    <button id="sendBtn" disabled>Send Message</button>
-  </div>
+<div id="joinSection">
+  <input type="text" id="username" placeholder="Your Name" />
+  <input type="text" id="room" placeholder="Room Code" />
+  <button onclick="joinRoom()">Join Room</button>
+</div>
 
-  <div class="media-container">
+<div id="chatSection">
+  <div>
     <video id="localVideo" autoplay muted playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
-    <audio id="localAudio" autoplay muted></audio>
-    <audio id="remoteAudio" autoplay></audio>
   </div>
 
   <div id="messageArea"></div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+  <form id="messageForm">
+    <input type="text" id="messageInput" placeholder="Type a message..." autocomplete="off" required />
+    <button type="submit">Send</button>
+  </form>
+
+  <button type="button" onclick="startCall(true)">📹 Start Video Call</button>
+  <button type="button" onclick="startCall(false)">🎧 Start Audio Call</button>
+  <button type="button" onclick="dropCall()">❌ Drop Call</button>
+</div>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="client.js"></script>
+
 </body>
 </html>
