--- a/index.html
+++ b/index.html
@@ -3,12 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WebRTC Audio Chat</title>
+  <title>WebRTC Audio Call with Debug</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Add any quick styles for audio containers */
+    #localAudioContainer, #remoteAudioContainer {
+      position: relative;
+      display: inline-block;
+      margin-right: 10px;
+    }
+
+    #localAudioStatus, #remoteAudioStatus {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background: red;
+      border: 1px solid #333;
+      z-index: 10;
+    }
+
+    audio {
+      width: 250px;
+      height: 40px;
+      outline: none;
+      background: #222;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
 
-<h1>WebRTC Audio Chat</h1>
+<h1>WebRTC Audio Call with Debug Indicators</h1>
 
 <div id="joinSection">
   <input type="text" id="username" placeholder="Your Name" />
@@ -16,13 +44,21 @@
   <button onclick="joinRoom()">Join Room</button>
 </div>
 
-<div id="chatSection" style="display:none;">
+<div id="chatSection" style="display:none; margin-top: 20px;">
+  
   <div>
-    <audio id="localAudio" autoplay muted></audio>
-    <audio id="remoteAudio" autoplay></audio>
+    <div id="localAudioContainer">
+      <audio id="localAudio" autoplay muted></audio>
+      <div id="localAudioStatus"></div>
+    </div>
+
+    <div id="remoteAudioContainer">
+      <audio id="remoteAudio" autoplay></audio>
+      <div id="remoteAudioStatus"></div>
+    </div>
   </div>
 
-  <div id="messageArea"></div>
+  <div id="messageArea" style="height: 150px; overflow-y: auto; border: 1px solid #ccc; background: #fff; padding: 10px; margin: 10px 0;"></div>
 
   <form id="messageForm">
     <input type="text" id="messageInput" placeholder="Type a message..." autocomplete="off" required />
@@ -31,6 +67,7 @@
 
   <button type="button" onclick="startCall()">🎧 Start Audio Call</button>
   <button type="button" onclick="dropCall()">❌ Drop Call</button>
+
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
